samgr part name rectify
Signed-off-by: zmx <1029211721@qq.com>
Change-Id: If6044b65973c8f92de43d55469594f4eae2ea46b

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -45,7 +45,7 @@ ohos_shared_library("tel_state_registry") {
     "ces_standard:cesfwk_innerkits",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
-    "samgr_L2:samgr_proxy",
+    "samgr_standard:samgr_proxy",
   ]
 
   defines = [
