--- a/interfaces/kits/BUILD.gn
+++ b/interfaces/kits/BUILD.gn
@@ -43,7 +43,7 @@ ohos_shared_library("tel_state_registry_api") {
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
-    "samgr_L2:samgr_proxy",
+    "samgr_standard:samgr_proxy",
   ]
 
   defines = [
