--- a/test/unittest/state_registry_gtest/BUILD.gn
+++ b/test/unittest/state_registry_gtest/BUILD.gn
@@ -43,7 +43,7 @@ ohos_unittest("tel_state_registry_test") {
   external_deps = [
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
-    "samgr_L2:samgr_proxy",
+    "samgr_standard:samgr_proxy",
   ]
 
   if (is_standard_system) {
