--- a/frameworks/native/BUILD.gn
+++ b/frameworks/native/BUILD.gn
@@ -10,43 +10,41 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-
 import("//build/ohos.gni")
-SOURCE_DIR = "//base/telephony/state_registry"
+SUBSYSTEM_DIR = "//base/telephony/state_registry"
 CORE_DIR = "//base/telephony/core_service"
 
-ohos_shared_library("tel_state_registry") {
-  part_name = "state_registry"
-  subsystem_name = "telephony"
-
+ohos_shared_library("tel_state_registry_api") {
   sources = [
-    "$SOURCE_DIR/frameworks/native/src/telephony_observer_proxy.cpp",
-    "$SOURCE_DIR/service/src/telephony_state_registry_dump_helper.cpp",
-    "$SOURCE_DIR/service/src/telephony_state_registry_record.cpp",
-    "$SOURCE_DIR/service/src/telephony_state_registry_service.cpp",
-    "$SOURCE_DIR/service/src/telephony_state_registry_stub.cpp",
+    "$CORE_DIR/frameworks/native/src/cell_information.cpp",
+    "$CORE_DIR/frameworks/native/src/network_state.cpp",
+    "$CORE_DIR/frameworks/native/src/signal_information.cpp",
+    "$CORE_DIR/interfaces/innerkits/state_registry/telephony_state_registry_proxy.cpp",
+    "src/telephony_observer.cpp",
+    "src/telephony_observer_client.cpp",
+    "src/telephony_observer_proxy.cpp",
+    "src/telephony_state_manager.cpp",
   ]
 
   include_dirs = [
-    "$SOURCE_DIR/include",
-    "$SOURCE_DIR/frameworks/native/include",
-    "$SOURCE_DIR/service/include",
-    "$CORE_DIR/interfaces/kits/native",
-    "$CORE_DIR/interfaces/innerkits/state_registry",
-    "$CORE_DIR/interfaces/innerkits/core",
-    "$CORE_DIR/interfaces/innerkits/state_registry",
-    "$CORE_DIR/interfaces/innerkits/core",
-  ]
+    "$SUBSYSTEM_DIR/frameworks/native/include",
+    "//third_party/node/src",
+    "$SUBSYSTEM_DIR/service/include",
 
+    "$CORE_DIR/interfaces/innerkits/core",
+    "$CORE_DIR/interfaces/innerkits/state_registry",
+
+    "$CORE_DIR/frameworks/js/napi",
+    "$CORE_DIR/interfaces/innerkits/core",
+    "//base/telephony/ril_adapter/interfaces/innerkits",
+  ]
   deps = [
-    "$CORE_DIR/frameworks/native:tel_core_service_api",
     "$CORE_DIR/utils:libtelephony_common",
+    "$SUBSYSTEM_DIR:tel_state_registry",
   ]
 
   external_deps = [
-    "aafwk_standard:want",
-    "appexecfwk_standard:libeventhandler",
-    "ces_standard:cesfwk_innerkits",
+    "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
     "samgr_standard:samgr_proxy",
@@ -57,9 +55,6 @@ ohos_shared_library("tel_state_registry") {
     "LOG_DOMAIN = 0",
   ]
 
-  if (is_standard_system) {
-    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
-  } else {
-    external_deps += [ "hilog:libhilog" ]
-  }
+  part_name = "state_registry"
+  subsystem_name = "telephony"
 }
