zhanghaifeng11@huawei.com
Signed-off-by: zhf <zhanghaifeng11@huawei.com>

--- a/frameworks/js/napi/BUILD.gn
+++ b/frameworks/js/napi/BUILD.gn
@@ -16,19 +16,16 @@ ohos_shared_library("observer") {
   include_dirs = [
     "//third_party/node/src",
     "include",
-    "$SUBSYSTEM_DIR/state_registry/frameworks/native/include",
+    "$SUBSYSTEM_DIR/state_registry/frameworks/native/observer/include",
     "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/state_registry",
     "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/sim",
+    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/core",
     "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/network_search",
-    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/core",
-    "$SUBSYSTEM_DIR/core_service/frameworks/js/sim/include",
-    "$SUBSYSTEM_DIR/core_service/frameworks/js/napi",
-    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/cellular_call",
-    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/sim",
-    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/core",
     "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/cellular_data",
-    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/call_manager",
-    "$SUBSYSTEM_DIR/core_service/interfaces/innerkits/core",
+    "$SUBSYSTEM_DIR/core_service/frameworks/js/sim/include",
+    "$SUBSYSTEM_DIR/core_service/frameworks/js/network_search/include",
+    "$SUBSYSTEM_DIR/core_service/frameworks/js/napi",
+    "$SUBSYSTEM_DIR/call_manager/interfaces/innerkits",
     "$SUBSYSTEM_DIR/core_service/frameworks/native/include",
     "$SUBSYSTEM_DIR/cellular_data/interfaces/innerkits",
     "//third_party/libuv/include",
@@ -45,7 +42,7 @@ ohos_shared_library("observer") {
   deps = [
     "$SUBSYSTEM_DIR/core_service:tel_core_service",
     "$SUBSYSTEM_DIR/core_service/utils:libtelephony_common",
-    "$SUBSYSTEM_DIR/state_registry/frameworks/native:tel_state_registry_api",
+    "$SUBSYSTEM_DIR/ril_adapter/services/hril:hril",
     "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
     "//foundation/ace/napi:ace_napi",
     "//third_party/libuv:uv_static",
@@ -60,9 +57,9 @@ ohos_shared_library("observer") {
     "appexecfwk_standard:libeventhandler",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
-    "ril_adapter:hril_innerkits",
     "safwk:system_ability_fwk",
     "samgr_standard:samgr_proxy",
+    "state_registry:tel_state_registry_api",
   ]
 
   defines = [
