--- a/BUILD.gn
+++ b/BUILD.gn
@@ -20,7 +20,10 @@ ohos_shared_library("tel_state_registry") {
   subsystem_name = "telephony"
 
   sources = [
-    "$SOURCE_DIR/frameworks/native/src/telephony_observer_proxy.cpp",
+    "$CORE_DIR/frameworks/native/src/cell_information.cpp",
+    "$CORE_DIR/frameworks/native/src/network_state.cpp",
+    "$CORE_DIR/frameworks/native/src/signal_information.cpp",
+    "$SOURCE_DIR/frameworks/native/observer/src/telephony_observer_proxy.cpp",
     "$SOURCE_DIR/service/src/telephony_state_registry_dump_helper.cpp",
     "$SOURCE_DIR/service/src/telephony_state_registry_record.cpp",
     "$SOURCE_DIR/service/src/telephony_state_registry_service.cpp",
@@ -28,25 +31,23 @@ ohos_shared_library("tel_state_registry") {
   ]
 
   include_dirs = [
-    "$SOURCE_DIR/include",
+    "$SOURCE_DIR/frameworks/native/observer/include",
+    "$SOURCE_DIR/frameworks/native/common/include",
     "$SOURCE_DIR/frameworks/native/include",
     "$SOURCE_DIR/service/include",
-    "$CORE_DIR/interfaces/kits/native",
+
     "$CORE_DIR/interfaces/innerkits/state_registry",
     "$CORE_DIR/interfaces/innerkits/core",
-    "$CORE_DIR/interfaces/innerkits/state_registry",
-    "$CORE_DIR/interfaces/innerkits/core",
+    "$CORE_DIR/interfaces/innerkits/cellular_data",
   ]
 
-  deps = [
-    "$CORE_DIR/frameworks/native:tel_core_service_api",
-    "$CORE_DIR/utils:libtelephony_common",
-  ]
+  deps = [ "$CORE_DIR/utils:libtelephony_common" ]
 
   external_deps = [
     "aafwk_standard:want",
     "appexecfwk_standard:libeventhandler",
     "ces_standard:cesfwk_innerkits",
+    "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
     "samgr_standard:samgr_proxy",
@@ -56,10 +57,4 @@ ohos_shared_library("tel_state_registry") {
     "TELEPHONY_LOG_TAG = \"STATE_REGISTRY\"",
     "LOG_DOMAIN = 0",
   ]
-
-  if (is_standard_system) {
-    external_deps += [ "hiviewdfx_hilog_native:libhilog" ]
-  } else {
-    external_deps += [ "hilog:libhilog" ]
-  }
 }
