chore: state_registry部件化
1、添加bundle.json
2、BUILD.gn整改，deps中只包括bundle内部依赖。对外部部件的依赖均移到external_deps中，删除冗余include_dirs

Signed-off-by: Hongjin Li <lihongjin1@huawei.com>
Change-Id: Ib60c2c55e9693ff9a8a7a53b268eed7c758a28f0

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -35,16 +35,14 @@ ohos_shared_library("tel_state_registry") {
     "$SOURCE_DIR/frameworks/native/observer/include",
     "$SOURCE_DIR/frameworks/native/common/include",
     "$SOURCE_DIR/service/include",
-
-    "$CORE_DIR/interfaces/innerkits/include",
   ]
-
-  deps = [ "$CORE_DIR/utils:libtel_common" ]
 
   external_deps = [
     "ability_runtime:want",
     "appexecfwk_standard:libeventhandler",
     "ces_standard:cesfwk_innerkits",
+    "core_service:libtel_common",
+    "core_service:tel_core_service_api",
     "hiviewdfx_hilog_native:libhilog",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
