--- a/frameworks/native/notify/BUILD.gn
+++ b/frameworks/native/notify/BUILD.gn
@@ -18,7 +18,6 @@ config("state_registry_notify_config") {
   include_dirs = [
     "$SUBSYSTEM_DIR/interfaces/innerkits/notify",
     "$SUBSYSTEM_DIR/frameworks/native/common/include",
-    "$CORE_DIR/interfaces/innerkits/cellular_data",
   ]
 }
 
@@ -33,13 +32,12 @@ ohos_shared_library("tel_state_registry_notify") {
 
   include_dirs = [
     "$SUBSYSTEM_DIR/frameworks/native/notify/include",
-    "$CORE_DIR/interfaces/innerkits/state_registry",
-    "$CORE_DIR/interfaces/innerkits/core",
+    "$CORE_DIR/interfaces/innerkits/include",
   ]
 
   public_configs = [ ":state_registry_notify_config" ]
 
-  deps = [ "$CORE_DIR/utils:libtelephony_common" ]
+  deps = [ "$CORE_DIR/utils:libtel_common" ]
 
   external_deps = [
     "hiviewdfx_hilog_native:libhilog",
