--- a/BUILD.gn
+++ b/BUILD.gn
@@ -36,10 +36,7 @@ ohos_shared_library("tel_state_registry") {
 
   configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]
 
-  deps = [
-    "$CORE_DIR/utils:libtel_common",
-    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
-  ]
+  deps = [ "$CORE_DIR/utils:libtel_common" ]
 
   external_deps = [
     "ability_base:want",
@@ -50,6 +47,7 @@ ohos_shared_library("tel_state_registry") {
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
     "samgr_standard:samgr_proxy",
+    "startup_l2:syspara",
   ]
 
   defines += [
