--- a/BUILD.gn
+++ b/BUILD.gn
@@ -40,7 +40,7 @@ ohos_shared_library("tel_state_registry") {
 
   external_deps = [
     "ability_base:want",
-    "ces_standard:cesfwk_innerkits",
+    "common_event_service:cesfwk_innerkits",
     "core_service:tel_core_service_api",
     "eventhandler:libeventhandler",
     "hiviewdfx_hilog_native:libhilog",
