--- a/frameworks/native/observer/BUILD.gn
+++ b/frameworks/native/observer/BUILD.gn
@@ -53,8 +53,8 @@ ohos_shared_library("tel_state_registry_api") {
   ]
 
   defines = [
-    "TELEPHONY_LOG_TAG = \"STATE_REGISTRY\"",
-    "LOG_DOMAIN = 0",
+    "TELEPHONY_LOG_TAG = \"StateRegistryApi\"",
+    "LOG_DOMAIN = 0xD001F07",
   ]
 
   part_name = "state_registry"
