--- a/test/unittest/state_test/BUILD.gn
+++ b/test/unittest/state_test/BUILD.gn
@@ -45,8 +45,8 @@ ohos_unittest("tel_state_registry_test") {
   ]
 
   defines = [
-    "TELEPHONY_LOG_TAG = \"STATE_REGISTRY_TEST\"",
-    "LOG_DOMAIN = 0",
+    "TELEPHONY_LOG_TAG = \"StateRegistryTest\"",
+    "LOG_DOMAIN = 0xD000F00",
   ]
   if ("${product_name}" == "rk3568" || "${product_name}" == "DAYU") {
     defines += [ "TEL_TEST_UNSUPPORT" ]
