--- a/frameworks/js/napi/BUILD.gn
+++ b/frameworks/js/napi/BUILD.gn
@@ -37,7 +37,7 @@ ohos_shared_library("observer") {
 
   deps = [
     "//foundation/arkui/napi:ace_napi",
-    "//third_party/libuv:uv_static",
+    "//third_party/libuv:uv",
   ]
 
   external_deps = [
