--- a/BUILD.gn
+++ b/BUILD.gn
@@ -40,6 +40,7 @@ ohos_shared_library("tel_state_registry") {
 
   external_deps = [
     "ability_base:want",
+    "call_manager:tel_call_manager_api",
     "common_event_service:cesfwk_innerkits",
     "core_service:tel_core_service_api",
     "hiviewdfx_hilog_native:libhilog",
