--- a/test/unittest/state_test/BUILD.gn
+++ b/test/unittest/state_test/BUILD.gn
@@ -35,9 +35,15 @@ ohos_unittest("tel_state_registry_test") {
 
   configs = [ "//base/telephony/core_service/utils:telephony_log_config" ]
 
+  deps = [ "//base/telephony/state_registry/frameworks/native/observer:tel_state_registry_api" ]
+
   external_deps = [
+    "access_token:libaccesstoken_sdk",
+    "access_token:libnativetoken",
+    "access_token:libtoken_setproc",
     "c_utils:utils",
     "core_service:tel_core_service_api",
+    "init:libbegetutil",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
