--- a/BUILD.gn
+++ b/BUILD.gn
@@ -47,6 +47,7 @@ ohos_shared_library("tel_state_registry") {
     "init:libbegetutil",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
+    "samgr:samgr_proxy",
   ]
 
   defines += [
