--- a/frameworks/native/observer/BUILD.gn
+++ b/frameworks/native/observer/BUILD.gn
@@ -47,6 +47,7 @@ ohos_shared_library("tel_state_registry_api") {
   ]
   install_images = [ system_base_dir ]
   relative_install_dir = "platformsdk"
+  innerapi_tags = [ "platformsdk" ]
   part_name = "state_registry"
   subsystem_name = "telephony"
 }
