IssueNo: hilog/hisysevent部件名整改
Description: hilog/hisysevent部件名整改
Sig: SIG_Telephony
Feature or Bugfix: Feature
Binary Source: No

Signed-off-by: zhoujie223 <zhoujie223@huawei.com>

--- a/frameworks/native/observer/BUILD.gn
+++ b/frameworks/native/observer/BUILD.gn
@@ -38,7 +38,7 @@ ohos_shared_library("tel_state_registry_api") {
     "c_utils:utils",
     "core_service:libtel_common",
     "core_service:tel_core_service_api",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "ipc:ipc_core",
     "samgr:samgr_proxy",
   ]
