--- a/BUILD.gn
+++ b/BUILD.gn
@@ -38,7 +38,7 @@ ohos_shared_library("tel_state_registry") {
     "common_event_service:cesfwk_innerkits",
     "core_service:libtel_common",
     "core_service:tel_core_service_api",
-    "hiviewdfx_hilog_native:libhilog",
+    "hilog:libhilog",
     "init:libbegetutil",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
