--- a/test/fuzztest/telephonystateregistry_fuzzer/BUILD.gn
+++ b/test/fuzztest/telephonystateregistry_fuzzer/BUILD.gn
@@ -29,7 +29,10 @@ ohos_fuzztest("TelephonyStateRegistryFuzzTest") {
     "$SUBSYSTEM_DIR/state_registry/test/fuzztest/common_fuzzer",
   ]
 
-  deps = [ "$SUBSYSTEM_DIR/state_registry:tel_state_registry" ]
+  deps = [
+    "$SUBSYSTEM_DIR/state_registry:tel_state_registry",
+    "$SUBSYSTEM_DIR/state_registry/frameworks/native/observer:tel_state_registry_api",
+  ]
 
   external_deps = [
     "ability_base:want",
@@ -46,7 +49,6 @@ ohos_fuzztest("TelephonyStateRegistryFuzzTest") {
     "ipc:ipc_single",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
-    "state_registry:tel_state_registry_api",
   ]
 
   cflags = [
