--- a/frameworks/js/napi/BUILD.gn
+++ b/frameworks/js/napi/BUILD.gn
@@ -13,6 +13,15 @@
 import("//build/ohos.gni")
 SUBSYSTEM_DIR = "../../../.."
 ohos_shared_library("observer") {
+  sanitize = {
+    integer_overflow = true
+    all_ubsan = true
+    boundary_sanitize = true
+    cfi = true
+    cfi_cross_dso = true
+    debug = false
+  }
+  branch_protector_ret = "pac_ret"
   include_dirs = [
     "//third_party/node/src",
     "include",
