--- a/BUILD.gn
+++ b/BUILD.gn
@@ -14,6 +14,15 @@
 import("//build/ohos.gni")
 
 ohos_shared_library("tel_state_registry") {
+  sanitize = {
+    integer_overflow = true
+    all_ubsan = true
+    boundary_sanitize = true
+    cfi = true
+    cfi_cross_dso = true
+    debug = false
+  }
+  branch_protector_ret = "pac_ret"
   part_name = "state_registry"
   subsystem_name = "telephony"
 
