--- a/frameworks/native/observer/BUILD.gn
+++ b/frameworks/native/observer/BUILD.gn
@@ -21,6 +21,15 @@ config("state_registry_observer_config") {
 }
 
 ohos_shared_library("tel_state_registry_api") {
+  sanitize = {
+    integer_overflow = true
+    all_ubsan = true
+    boundary_sanitize = true
+    cfi = true
+    cfi_cross_dso = true
+    debug = false
+  }
+  branch_protector_ret = "pac_ret"
   sources = [
     "$SUBSYSTEM_DIR/frameworks/native/observer/src/telephony_observer.cpp",
     "$SUBSYSTEM_DIR/frameworks/native/observer/src/telephony_observer_client.cpp",
